@startuml
hide circle
skinparam Ranksep 100
skinparam nodesep 60
skinparam Shadowing true
skinparam Linetype ortho
skinparam classAttributeIconSize 0
left to right direction

package "Actors" {
class User {
  +id: Integer
  +name: String
  +email: String
  +hash_pass: String
  +role: String <<student|teacher|admin>>
  +must_change_password: Boolean <<default FALSE>>
  +avatar_path: String (nullable)
}
}

package "Courses" {
class Course {
  +id: Integer
  +teacherID: Integer
  +name: String
  +image_path: String (nullable)
}

class Assignment {
  +id: Integer
  +courseID: Integer
  +name: String
  +description: Text (nullable)
  +start_date: DateTime (nullable)
  +rubric_text: String
  +due_date: DateTime (nullable)
  +is_anonymous: Boolean <<default TRUE>>
  +individual_reviews: Boolean <<default TRUE>>
  +group_reviews: Boolean <<default TRUE>>
}

class CourseGroup {
  +id: Integer
  +name: String
  +courseID: Integer
}
}

package "Work" {
class Submission {
  +id: Integer
  +path: String
  +studentID: Integer
  +assignmentID: Integer
}

class Group_Members {
  +userID: Integer
  +groupID: Integer
}

class User_Course {
  +userID: Integer
  +courseID: Integer
}

class Review {
  +id: Integer
  +assignmentID: Integer
  +reviewerID: Integer
  +revieweeID: Integer (polymorphic)
  +review_type: String <<individual|group>>
  +comments: String
}

class Criterion {
  +id: Integer
  +reviewID: Integer
  +criterionRowID: Integer
  +grade: Integer
  +comments: String
}
}

package "Rubrics" {
class Rubric {
  +id: Integer
  +assignmentID: Integer
  +canComment: Boolean <<default TRUE>>
  +rubric_type: String <<individual|group>>
}

class CriteriaDescription {
  +id: Integer
  +rubricID: Integer
  +question: String
  +scoreMax: Integer
  +hasScore: Boolean <<default TRUE>>
}
}

package "Resources" {
class AssignmentResource {
  +id: Integer
  +assignmentID: Integer
  +uploaderID: Integer
  +original_name: String
  +path: String
  +created_at: DateTime
}
}

package "Grades" {
class GradeOverride {
  +id: Integer
  +studentID: Integer
  +assignmentID: Integer
  +courseID: Integer
  +override_score: Float
  +teacherID: Integer
  <<UNIQUE(studentID, assignmentID, courseID)>>
}
}

' Hidden layout hints to keep columns separated
User -[hidden]-> Course
Course -[hidden]-> Assignment
Assignment -[hidden]-> Submission
Submission -[hidden]-> Review
Review -[hidden]-> Rubric
Rubric -[hidden]-> CriteriaDescription
User_Course -[hidden]- Group_Members

' Teaching & enrollment relationships
User "1" --> "0..*" Course : teaches
User "1" o-- "0..*" User_Course : enrollments
Course "1" o-- "0..*" User_Course : student links

' Course & assignment structure
Course "1" --> "0..*" Assignment : assignments
Course "1" --> "0..*" CourseGroup : groups

' Group membership bridge
CourseGroup "1" o-- "0..*" Group_Members : members
User "1" o-- "0..*" Group_Members : memberships

' Submissions
User "1" --> "0..*" Submission : submissions
Assignment "1" --> "0..*" Submission : collects

' Peer review flow
Assignment "1" --> "0..*" Review : reviews
User "1" --> "0..*" Review : reviewer
User "1" <.. "0..*" Review : reviewee (individual)
CourseGroup "1" <.. "0..*" Review : reviewee (group)
Review "1" --> "0..*" Criterion : criteria

' Rubrics and criteria
Assignment "1" --> "0..*" Rubric : rubrics
Rubric "1" --> "0..*" CriteriaDescription : questions
CriteriaDescription "1" --> "0..*" Criterion : responses

' Assignment resources
Assignment "1" --> "0..*" AssignmentResource : resources
User "1" --> "0..*" AssignmentResource : uploaded by

' Grade overrides
User "1" --> "0..*" GradeOverride : overrides for
Assignment "1" --> "0..*" GradeOverride : overrides on
Course "1" --> "0..*" GradeOverride : overrides in
User "1" --> "0..*" GradeOverride : set by (teacher)

@enduml